--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Universe.tf">
-    <meta property="og:description" content="Cheating, innovated.">
-    <meta name="description" content="Cheating, innovated.">
-    <meta name="keywords" content="creative, technology, future">
+    <meta property="og:description" content="Sexiest. Mommy.">
+    <meta name="description" content="Sexiest. Mommy.">
+    <meta name="keywords" content="Hot mommy :3">
     <meta content="lightbulb.png" property="og:image" />
     <meta content="#fe99dc" data-react-helmet="true" name="theme-color" />
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -166,9 +166,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Universe.tf">
-    <meta property="og:description" content="Cheating, innovated.">
-    <meta name="description" content="Cheating, innovated.">
-    <meta name="keywords" content="creative, technology, future">
+    <meta property="og:description" content="Sexiest. Mommy.">
+    <meta name="description" content="Sexiest. Mommy.">
+    <meta name="keywords" content="Hot Mommy :3">
     <meta content="lightbulb.png" property="og:image" />
     <meta content="#fe99dc" data-react-helmet="true" name="theme-color" />
     <link rel="icon" href="favicon.ico" type="image/x-icon">
